# accept-payments

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: main.yml
cdk/: .gitignore  README.md  bun.lockb  package.json  tsconfig.json
cdk/lib/: cdk-stack.ts
infra/: .terraform.lock.hcl  IMPORTED.md  backend.tf  generated.tf  github.tf  imports.tf  main.tf  storage.tf  variables.tf
src/: main.rs
src/migrations/2023-04-07-231632_create_posts/: up.sql
tests/fixtures/: ach_async_payment_succeeded.json
web/: README.md  index.html  package.json  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts
web/src/components/: receipt.tsx
web/src/lib/: api.ts
web/src/routes/: __root.tsx  admin.tsx  cancel.tsx  i.$token.tsx  index.tsx  success.tsx
