[package]
name = "accept-payments"
version = "0.1.0"
edition = "2021"

[dependencies]
# "full" matches the crate's default resource set — webhook-events fails to
# compile against narrower feature combinations (missing cross-resource types)
async-stripe = { version = "0.41", default-features = false, features = ["runtime-tokio-hyper-rustls", "full", "webhook-events"] }
aws-config = "1"
aws-sdk-dynamodb = "1"
axum = "0.7"
lambda_http = "0.11.1"
lambda_runtime = "0.11.1"
serde = "1.0.196"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }
# GitHub OAuth: reqwest calls the GitHub API; jsonwebtoken signs the session cookie
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
# optional: bake the built web/dist SPA into the binary. CI builds the SPA, then
# `cargo lambda build --features embed-web`. Off by default so `cargo test` and
# local builds don't require a web build.
rust-embed = { version = "8", features = ["mime-guess"], optional = true }

[features]
embed-web = ["dep:rust-embed"]

[profile.release]
codegen-units = 16

[package.metadata.lambda.deploy]
tags = { "project" = "accept-payments" }
